src/antlr/AickuniParser.java
// Generated from src/antlr/Aickuni.g4 by ANTLR 4.10.1

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AickuniParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPARIT=1, OPREL=2, OPBOOL=3, BOOL=4, PARA=5, ENQUANTO=6, SE=7, ENTAO=8, 
		SENAO=9, FUNCR=10, FUNSR=11, LER=12, ESCREVER=13, ABLOCO=14, FBLOCO=15, 
		TIPO=16, APAREN=17, FPAREN=18, RETORNA=19, NUM=20, ID=21, TEXTO=22, SEP=23, 
		ATR=24, DELIM=25, A=26, WS=27;
	public static final int
		RULE_programa = 0, RULE_comando = 1, RULE_declaracao = 2, RULE_atribuicao = 3, 
		RULE_ler = 4, RULE_escrever = 5, RULE_exprarit = 6, RULE_exprlogi = 7, 
		RULE_exprcomp = 8, RULE_exprcond = 9, RULE_exprrepe = 10, RULE_funcao = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "comando", "declaracao", "atribuicao", "ler", "escrever", 
			"exprarit", "exprlogi", "exprcomp", "exprcond", "exprrepe", "funcao"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'PARA'", "'ENQUANTO'", "'SE'", "'ENTAO'", 
			"'SENAO'", "'FUNCAORETORNO'", "'FUNCAOSEMRETORNO'", "'LER'", "'ESCREVER'", 
			"'{'", "'}'", null, "'('", "')'", "'RETORNA'", null, null, null, "','", 
			"'ATRIBUI'", "';'", "'A'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPARIT", "OPREL", "OPBOOL", "BOOL", "PARA", "ENQUANTO", "SE", 
			"ENTAO", "SENAO", "FUNCR", "FUNSR", "LER", "ESCREVER", "ABLOCO", "FBLOCO", 
			"TIPO", "APAREN", "FPAREN", "RETORNA", "NUM", "ID", "TEXTO", "SEP", "ATR", 
			"DELIM", "A", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aickuni.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AickuniParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	 
		public ProgramaContext() { }
		public void copyFrom(ProgramaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NProgramaContext extends ProgramaContext {
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public TerminalNode DELIM() { return getToken(AickuniParser.DELIM, 0); }
		public NProgramaContext(ProgramaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			_localctx = new NProgramaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(24);
			comando();
			setState(25);
			match(DELIM);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
	 
		public ComandoContext() { }
		public void copyFrom(ComandoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NComandoContext extends ComandoContext {
		public List<TerminalNode> DELIM() { return getTokens(AickuniParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(AickuniParser.DELIM, i);
		}
		public List<ExprcondContext> exprcond() {
			return getRuleContexts(ExprcondContext.class);
		}
		public ExprcondContext exprcond(int i) {
			return getRuleContext(ExprcondContext.class,i);
		}
		public List<ExprrepeContext> exprrepe() {
			return getRuleContexts(ExprrepeContext.class);
		}
		public ExprrepeContext exprrepe(int i) {
			return getRuleContext(ExprrepeContext.class,i);
		}
		public List<FuncaoContext> funcao() {
			return getRuleContexts(FuncaoContext.class);
		}
		public FuncaoContext funcao(int i) {
			return getRuleContext(FuncaoContext.class,i);
		}
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public List<LerContext> ler() {
			return getRuleContexts(LerContext.class);
		}
		public LerContext ler(int i) {
			return getRuleContext(LerContext.class,i);
		}
		public List<EscreverContext> escrever() {
			return getRuleContexts(EscreverContext.class);
		}
		public EscreverContext escrever(int i) {
			return getRuleContext(EscreverContext.class,i);
		}
		public List<AtribuicaoContext> atribuicao() {
			return getRuleContexts(AtribuicaoContext.class);
		}
		public AtribuicaoContext atribuicao(int i) {
			return getRuleContext(AtribuicaoContext.class,i);
		}
		public NComandoContext(ComandoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comando);
		int _la;
		try {
			int _alt;
			_localctx = new NComandoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(73);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case LER:
					case ESCREVER:
					case TIPO:
					case ATR:
					case DELIM:
						{
						setState(36);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==TIPO) {
							{
							{
							setState(27);
							declaracao();
							setState(31);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la==WS) {
								{
								{
								setState(28);
								match(WS);
								}
								}
								setState(33);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							}
							}
							setState(38);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(52);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LER) | (1L << ESCREVER) | (1L << ATR))) != 0)) {
							{
							{
							setState(42);
							_errHandler.sync(this);
							switch (_input.LA(1)) {
							case LER:
								{
								setState(39);
								ler();
								}
								break;
							case ESCREVER:
								{
								setState(40);
								escrever();
								}
								break;
							case ATR:
								{
								setState(41);
								atribuicao();
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(47);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la==WS) {
								{
								{
								setState(44);
								match(WS);
								}
								}
								setState(49);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							}
							}
							setState(54);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(55);
						match(DELIM);
						setState(59);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(56);
								match(WS);
								}
								} 
							}
							setState(61);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
						}
						}
						break;
					case ENQUANTO:
					case SE:
					case FUNCR:
					case FUNSR:
						{
						setState(65);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case SE:
							{
							setState(62);
							exprcond();
							}
							break;
						case ENQUANTO:
							{
							setState(63);
							exprrepe();
							}
							break;
						case FUNCR:
						case FUNSR:
							{
							setState(64);
							funcao();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(70);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(67);
								match(WS);
								}
								} 
							}
							setState(72);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(75); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
	 
		public DeclaracaoContext() { }
		public void copyFrom(DeclaracaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NDeclaracaoContext extends DeclaracaoContext {
		public TerminalNode TIPO() { return getToken(AickuniParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(AickuniParser.ID, 0); }
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public NDeclaracaoContext(DeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNDeclaracao(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		int _la;
		try {
			_localctx = new NDeclaracaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(TIPO);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(78);
				match(WS);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribuicaoContext extends ParserRuleContext {
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
	 
		public AtribuicaoContext() { }
		public void copyFrom(AtribuicaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NAtribuicaoContext extends AtribuicaoContext {
		public TerminalNode ATR() { return getToken(AickuniParser.ATR, 0); }
		public TerminalNode A() { return getToken(AickuniParser.A, 0); }
		public TerminalNode ID() { return getToken(AickuniParser.ID, 0); }
		public TerminalNode NUM() { return getToken(AickuniParser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(AickuniParser.TEXTO, 0); }
		public ExpraritContext exprarit() {
			return getRuleContext(ExpraritContext.class,0);
		}
		public ExprlogiContext exprlogi() {
			return getRuleContext(ExprlogiContext.class,0);
		}
		public ExprcompContext exprcomp() {
			return getRuleContext(ExprcompContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public NAtribuicaoContext(AtribuicaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNAtribuicao(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atribuicao);
		int _la;
		try {
			int _alt;
			_localctx = new NAtribuicaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ATR);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(87);
				match(WS);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(93);
				match(NUM);
				}
				break;
			case 2:
				{
				setState(94);
				match(TEXTO);
				}
				break;
			case 3:
				{
				setState(95);
				exprarit();
				}
				break;
			case 4:
				{
				setState(96);
				exprlogi();
				}
				break;
			case 5:
				{
				setState(97);
				exprcomp();
				}
				break;
			}
			setState(100);
			match(A);
			setState(101);
			match(ID);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102);
					match(WS);
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LerContext extends ParserRuleContext {
		public LerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ler; }
	 
		public LerContext() { }
		public void copyFrom(LerContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NLerContext extends LerContext {
		public TerminalNode LER() { return getToken(AickuniParser.LER, 0); }
		public TerminalNode ID() { return getToken(AickuniParser.ID, 0); }
		public TerminalNode NUM() { return getToken(AickuniParser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(AickuniParser.TEXTO, 0); }
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public NLerContext(LerContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNLer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNLer(this);
		}
	}

	public final LerContext ler() throws RecognitionException {
		LerContext _localctx = new LerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ler);
		int _la;
		try {
			_localctx = new NLerContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(LER);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(109);
				match(WS);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUM) | (1L << ID) | (1L << TEXTO))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscreverContext extends ParserRuleContext {
		public EscreverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escrever; }
	 
		public EscreverContext() { }
		public void copyFrom(EscreverContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NEscreverContext extends EscreverContext {
		public TerminalNode ESCREVER() { return getToken(AickuniParser.ESCREVER, 0); }
		public TerminalNode ID() { return getToken(AickuniParser.ID, 0); }
		public TerminalNode NUM() { return getToken(AickuniParser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(AickuniParser.TEXTO, 0); }
		public ExpraritContext exprarit() {
			return getRuleContext(ExpraritContext.class,0);
		}
		public ExprlogiContext exprlogi() {
			return getRuleContext(ExprlogiContext.class,0);
		}
		public ExprcompContext exprcomp() {
			return getRuleContext(ExprcompContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public NEscreverContext(EscreverContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNEscrever(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNEscrever(this);
		}
	}

	public final EscreverContext escrever() throws RecognitionException {
		EscreverContext _localctx = new EscreverContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_escrever);
		int _la;
		try {
			_localctx = new NEscreverContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(ESCREVER);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(118);
				match(WS);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(124);
				match(ID);
				}
				break;
			case 2:
				{
				setState(125);
				match(NUM);
				}
				break;
			case 3:
				{
				setState(126);
				match(TEXTO);
				}
				break;
			case 4:
				{
				setState(127);
				exprarit();
				}
				break;
			case 5:
				{
				setState(128);
				exprlogi();
				}
				break;
			case 6:
				{
				setState(129);
				exprcomp();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpraritContext extends ParserRuleContext {
		public ExpraritContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprarit; }
	 
		public ExpraritContext() { }
		public void copyFrom(ExpraritContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NExprAritContext extends ExpraritContext {
		public TerminalNode OPARIT() { return getToken(AickuniParser.OPARIT, 0); }
		public List<TerminalNode> ID() { return getTokens(AickuniParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AickuniParser.ID, i);
		}
		public List<TerminalNode> NUM() { return getTokens(AickuniParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(AickuniParser.NUM, i);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public NExprAritContext(ExpraritContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNExprArit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNExprArit(this);
		}
	}

	public final ExpraritContext exprarit() throws RecognitionException {
		ExpraritContext _localctx = new ExpraritContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exprarit);
		int _la;
		try {
			int _alt;
			_localctx = new NExprAritContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(133);
				match(WS);
				}
			}

			setState(136);
			match(OPARIT);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(137);
				match(WS);
				}
			}

			setState(140);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(141);
					match(WS);
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprlogiContext extends ParserRuleContext {
		public ExprlogiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprlogi; }
	 
		public ExprlogiContext() { }
		public void copyFrom(ExprlogiContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NExprLogiContext extends ExprlogiContext {
		public TerminalNode OPBOOL() { return getToken(AickuniParser.OPBOOL, 0); }
		public List<TerminalNode> ID() { return getTokens(AickuniParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AickuniParser.ID, i);
		}
		public List<TerminalNode> BOOL() { return getTokens(AickuniParser.BOOL); }
		public TerminalNode BOOL(int i) {
			return getToken(AickuniParser.BOOL, i);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public NExprLogiContext(ExprlogiContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterNExprLogi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitNExprLogi(this);
		}
	}

	public final ExprlogiContext exprlogi() throws RecognitionException {
		ExprlogiContext _localctx = new ExprlogiContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exprlogi);
		int _la;
		try {
			int _alt;
			_localctx = new NExprLogiContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !(_la==BOOL || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(148);
				match(WS);
				}
			}

			setState(151);
			match(OPBOOL);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(152);
				match(WS);
				}
			}

			setState(155);
			_la = _input.LA(1);
			if ( !(_la==BOOL || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(159);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(156);
					match(WS);
					}
					} 
				}
				setState(161);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
